--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0'>
 <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700|Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Habibi' rel='stylesheet' type='text/css'>
+
 <link rel='stylesheet' href='css/site.css'>
 
  <link href='http://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.css' rel='stylesheet' />
@@ -18,14 +19,16 @@
 <div class=''>
 	<ul class='nav'>
 		<li class='active'><a data='all'class='active all'>All</a></li>
-		<li class=''><a data='snow'>Snow</a></li>
-		<li class=''><a data='drought'>Drought</a></li>
-		<li class=''><a data='flood'>Floods</a></li>
-		<li class=''><a data='pollution'>Pollution</a></li>
-		<li class=''><a data='tornado'>Tornado</a></li>
+		<li class=''><a class='snow' data='snow'>Snow</a></li>
+		<li class=''><a class='drought' data='drought'>Drought</a></li>
+		<li class=''><a class='flood' data='flood'>Floods</a></li>
+		<li class=''><a class='pollution' data='pollution'>Pollution</a></li>
+		<li class=''><a class='tornado' data='tornado'>Tornadoes</a></li>
 	</ul>
 </div>
+<div id='rep'></div>
 <div id ='info'></div>
+
 <div id='map'></div>
 <script src='js/site.js'></script>  
 
