--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <div class=''>
 	<ul class='nav'>
 		<li class='active'><a data='all'class='active all'>All</a></li>
-		<li class=''><a class='snow' data='snow'>Snow</a></li>
-		<li class=''><a class='drought' data='drought'>Drought</a></li>
-		<li class=''><a class='flood' data='flood'>Floods</a></li>
-		<li class=''><a class='pollution' data='pollution'>Pollution</a></li>
-		<li class=''><a class='tornado' data='tornado'>Tornadoes</a></li>
+		<li class=''><a lat='41.33' lon='-75.7' zoom='4' class='snow' data='snow'>Snow</a></li>
+		<li class=''><a lat='40.33' lon='-77.7' zoom='4' class='tornado' data='tornado'>Tornadoes</a></li>
+		<li class=''><a lat='43.33' lon='-110.7' zoom='4' class='drought' data='drought'>Drought</a></li>
+		<li class=''><a lat='42.33' lon='-73.0' zoom='6' class='flood' data='flood'>Floods</a></li>
+		<li class=''><a lat='39.33' lon='-78' zoom='6' class='pollution' data='pollution'>Pollution</a></li>
 	</ul>
 </div>
 <div id='rep'></div>
